styles.css
body {
    font-family: 'Courier New', Courier, monospace;
    padding: 100px 0 0 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    color: #f8f8f2;
    background-color: #282a36;
    align-items: center;

}

header {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    top: 0;
    background-color: #282a36;
    z-index: 1;
}



.darkMode {
    color: #44475a;
    background-color: #f8f8f2;
}

.darkHeader {
    color: #44475a;
    background-color: #f8f8f2;
}

li {
    list-style-type: none;
}

#searchInput {
    border-bottom: 3px solid #44475a;
    border-left: none;
    border-right: none;
    border-top: none;
    width: 110px;
    font-family: inherit;
    font-weight: 700;
    font-size: 16px;
    background-color: transparent;
    color: inherit;
    border-radius: 0px;
    /* padding: 3px 0 3px 3px; */
    text-align: left;
    /* height: 10px; */
}

.sorts {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    padding: 10px;
    flex-wrap: wrap;
}

.sorts button {
    text-align: center;
    border: 4px solid #44475a;
    width: 50px;
    height: 50px;
    font-family: inherit;
    /* font-weight: 700; */
    font-size: 32px;
    background-color: transparent;
    color: inherit;
    border-radius: 10px;
    padding: 0;
    margin: 0;
}

.sorts button:hover {
    border-color: #ff79c6;
}

.sorts button:active {
    transform: translateY(4px);
    border-color: #50fa7b;
}




.hero {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0;
    /* height: 100vh; */
    padding: 0 10px;
}



.barArea {
    display: flex;
    justify-content: center;
    padding: 0;
    gap: 20px;
    flex-wrap: wrap;
}

.barAreaListView {
    display: flex;
    flex-direction: column;
    width: 70%;
    gap: 100px;
}







.progress {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    width: 300px;
    height: 120px;
    padding: 20px 20px;
    /* margin-bottom: 50px; */
    border: 5px solid #44475a;
    border-radius: 15px;
    position: relative
}

.progressLength {

    padding: 0;
    margin: 0;
    border: none;
    width: 100%;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
}





.coinInfo {
    display: flex;
    justify-content: space-between;
    /* flex-wrap: wrap; */
}

.iconAndName {
    display: flex;
    align-items: center;
    /* width: 200px; */
}

.coinIcon {
    width: 30px;
    height: 30px;
    border-radius: 50%;
}

.iconAndName h2 {
    margin-left: 10px;
    margin-top: 0;
    margin-bottom: 0;
    font-size: 20px;
}

.moreText {
    text-align: center;
    font-size: 20px;
}



#moreToCome:hover {
    border-color: #ff79c6;
    color: #ff79c6;
}

.currentPrice,
.percent {
    margin: 0;
    font-weight: 900;
    text-align: right;
}

.currentPrice {
    font-size: 20px;
    color: #ff79c6;
}

.percent {
    font-size: 16px;
}

.athOnStatusBar {
    font-size: 18px;
    font-weight: 900;
    text-align: right;
    margin: 0 0 5px 0;
    color: #bd93f9;
}



.statusBar {
    position: relative;
    height: 15px;
    width: 100%;
    background-color: inherit;
    border-radius: 25px;
    border: 3px solid #bd93f9
}

@keyframes growFromLeft {
    0% {
        transform: scaleX(0);
    }

    100% {
        transform: scaleX(1);
    }
}

.status-bar-fill {
    transform-origin: 0% 50%;
    transform: cubic-bezier(.32, 0, .07, 1);
    animation: 0.69s growFromLeft;
    position: absolute;
    height: 100%;
    background-color: #bd93f9;
    border-radius: 25px;
    padding: 0;
    margin: 0;

}


#logo {
    border: 8px solid #bd93f9;
    border-radius: 25px;
    box-shadow: 0 0 10px 5px #f8f8f2;

}


.logo-rotate {
    transform: rotate(180deg);
}



#logo:active {
    transform: translateY(4px);
    border: 8px solid #ff79c6;

}




footer {
    padding: 10px;
    margin-top: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    position: relative;

}

#footerText {
    text-align: center;
    margin: 10px;
    max-width: 95%;
}




a {
    /* text-decoration: none; */
    color: inherit;
}


li.progress:hover {
    border-color: #ff79c6;
}

li.progress:hover .tooltip {
    visibility: visible;
    opacity: 1;
    top: calc(0% - 100px);
    left: calc(7%);
}

.tooltip {
    font-family: inherit;
    font-weight: 500;
    font-size: 16px;
    position: absolute;
    visibility: hidden;
    opacity: 0;
    background-color: #44475a;
    color: #f8f8f2;
    border: 3px solid #f8f8f2;
    border-radius: 10px;
    padding: 15px 10px;
    z-index: 1;
    width: max-content;
    white-space: pre-wrap;
    text-align: end;
}

